# agency-ottawa-2026

./: .gitignore  CLAUDE.md  README.md  analysis-toolbox.md  challenges.md  docker-compose.yml  index.html  research.md  zombie-recipients-pitch.html
.local-db/: import.js
AB/: .env.example  CLAUDE.md  README.md  package-lock.json  package.json
CHARSTAT/: .gitignore  CLAUDE.md  package-lock.json  package.json
CORP/: .gitignore  CLAUDE.md  package-lock.json  package.json
CRA/: CLAUDE.md  README.md  package.json
FED/: .env.example  CLAUDE.md  README.md  package-lock.json  package.json
LOBBY/: .gitignore  CLAUDE.md  package-lock.json  package.json
PA/: .env  .gitattributes  .gitignore  CLAUDE.md  package-lock.json  package.json
evaluations/: 01-zombie-recipients.md  02-ghost-capacity.md  (+9 more)
zombie-agent/: .env.example  .gitignore  README.md  WINNING_PRESENTATION.md  pyproject.toml
zombie-agent/dashboard/: index.html
zombie-agent/scripts/: smoke_test.py  verify_corp_pa.py
zombie-agent/src/: agent.py  config.py  hooks.py  main.py  router.py  run_manager.py  streaming.py  system_prompt.py  verifier.py
zombie-agent/src/mcp_servers/: __init__.py  postgres.py  ui_bridge.py
zombie-agent/src/reporting/: report.py  run_store.py
zombie-agent/src/workspace/: CLAUDE.md
zombie-agent/src/workspace/.claude/skills/accountability-investigator/: SKILL.md
zombie-agent/src/workspace/.claude/skills/data-quirks/: SKILL.md
zombie-agent/src/workspace/.claude/skills/zombie-detection/: SKILL.md
zombie-agent/tests/: test_unit.py
zombie-agent/ui/: index.html
(+75 files in other folders)
